--- a/Cargo.toml
+++ b/Cargo.toml
@@ -24,6 +24,10 @@ ark-std = "0.3.0"
 ark-ff = "0.3.0"
 ark-ec = { version = "0.3.0", features = [ "parallel" ] }
 ark-bls12-377 = { version = "0.3.0" }
+home = "0.5.9"
+abomonation = "0.7.3"
+abomonation_derive = { version = "0.1.0", package = "abomonation_derive_ng" }
+plotters = "0.3.5"
 
 [build-dependencies]
 cc = "^1.0.70"
